Update application with expanded career paths, new authors and contact info, and application name change

--- a/skillchain-frontend/src/i18n/locales/en/translation.json
+++ b/skillchain-frontend/src/i18n/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "SkillChain",
+    "title": "Skillchain by Szamani.AI",
     "subtitle": "Discover your IT career path"
   },
   "navigation": {
