--- a/skillchain-frontend/src/i18n/locales/pl/translation.json
+++ b/skillchain-frontend/src/i18n/locales/pl/translation.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "SkillChain",
+    "title": "Skillchain by Szamani.AI",
     "subtitle": "Odkryj swoją ścieżkę kariery w IT"
   },
   "navigation": {
